2005-02-26  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-kvp.c (force_account_dirty):
	Force account 'dirty' after modifying the kvp_frame. Hopefully
	fixes #165096.

2005-02-21  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/import-backend.c, import-backend.h,
	import-main-matcher.h: Revert the change in December about date
	matching thresholds that broke some OFX import. Now, the hard
	limit days interval is set by the importing sub-module when
	creating the dialog. This way, HBCI and OFX can set their
	different requirements. (Note: QIF does not use this code at all.)

2005-02-20  Neil Williams  <linux@codehelp.co.uk>
	* src/engine/qof_book_merge.c: Fix double free of the targetList
	entities that cause xaccGroupGetNumSubAccounts to generate a
	segmentation fault.
	* src/engine/kvp_frame.c: 
	* src/engine/kvp_frame.h:
	Add kvp_value_to_bare_string to
	generate strings without debug information.
	* src/engine/qofsession.h:
	* src/engine/qofsession.c:
	Documentation tweaks to bring them into line with QOF and the
	gnucash-gnome2-dev branch.

2005-02-16  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-utils.c: When trying to load the symbol
	  from a glade file, Fall back to dlsym() if g_module_symbol()
	  fails.  This is necessary to find the symbols on on certain *BSD
	  systems.

	* acinclude.m4: Add mips, mipsel, arm, and m68k for Debian.

2005-02-06  Chris Lyttle  <chris@wilddev.net>

	* src/scm/main.scm: Update for 1.8.11 release

2005-02-06  Derek Atkins  <derek@ihtfp.com>

	* src/engine/date.c: Fix the last-day-of-month computation for
	  leap years.  Need to use modulo, not divide.  (Patch by
	  Neil Williams.

2005-02-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-gettrans.c: Fix HBCI date range
	for statement download.

2005-02-05  Derek Atkins  <derek@ihtfp.com>

	* src/report/locale-specific/us/Makefile.am: make sure the
	  scheme reports are part of the DIST.
