@@ -42,6 +42,7 @@ gboolean GNCInteractor_get_cache_valid(const GNCInteractor *i);
 void GNCInteractor_set_cache_valid(GNCInteractor *i, gboolean value);
 GtkWidget *GNCInteractor_parent(GNCInteractor *i);
 void GNCInteractor_add_log_text (GNCInteractor *i, const char *msg);
+gboolean GNCInteractor_hadErrors (const GNCInteractor *i);
 
 
 #endif
